cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
project(MuStoreBenchmark VERSION 1.0)
file(GLOB SOURCES "./*.cpp")
add_executable(mustoreBenchmark ${SOURCES})
include_directories(mustoreBenchmark PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(mustoreBenchmark pthread)
